# Compatible-Chords

./: .gitmodules  CMakeLists.txt  Chord.cpp  Chord.h  ChordBank.cpp  ChordBank.h  Key.cpp  Key.h  Measure.cpp  Measure.h  README.md  Testing.cpp  Track.cpp  Track.h  Triad.cpp  Triad.h  main.cpp
midi/: autumnLeaves.mid
